test/should_not_compile/syntax_pattern_row_label.sml
fun foo { x = 1, x = 2 } = true
  | foo _ = false;
